src/parsers/HightLavelIRParser.cpp

// Generated from HightLavelIR.g4 by ANTLR 4.13.2


#include "HightLavelIRListener.h"

#include "HightLavelIRParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct HightLavelIRParserStaticData final {
  HightLavelIRParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  HightLavelIRParserStaticData(const HightLavelIRParserStaticData&) = delete;
  HightLavelIRParserStaticData(HightLavelIRParserStaticData&&) = delete;
  HightLavelIRParserStaticData& operator=(const HightLavelIRParserStaticData&) = delete;
  HightLavelIRParserStaticData& operator=(HightLavelIRParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag hightlavelirParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<HightLavelIRParserStaticData> hightlavelirParserStaticData = nullptr;

void hightlavelirParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (hightlavelirParserStaticData != nullptr) {
    return;
  }
#else
  assert(hightlavelirParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<HightLavelIRParserStaticData>(
    std::vector<std::string>{
      "program", "importStatement", "qualifiedName", "statementList", "functionDeclaration", 
      "functionSignature", "functionReturnType", "functionArgs", "functionArg", 
      "functionCall", "functionCallArgs", "functionCallArg", "returnStatemant", 
      "op", "opRight", "opLeft", "typeRight", "typeLeft", "cast", "mathOp", 
      "expr", "assignment", "functionPtr", "number", "dataFormat", "varTypes"
    },
    std::vector<std::string>{
      "", "'fptr'", "':'", "','", "'='", "';'", "'.'", "'*'", "'{'", "'}'", 
      "'('", "')'", "'MULT'", "'PLUS'", "'MINUS'", "'DIV'", "'['", "']'", 
      "'@'", "'->'", "'_'", "'fn'", "'let'", "'public'", "'private'", "'import'", 
      "'return'", "'to'", "'int'", "'char'", "'float'", "'string'", "'boolean'", 
      "'double'", "'void'", "'cast'", "'call'"
    },
    std::vector<std::string>{
      "", "", "COLON", "COMMA", "EQ", "SEMICOLON", "DOT", "STAR", "L_CURLY", 
      "R_CURLY", "L_PAREN", "R_PAREN", "MULT", "PLUS", "MINUS", "DIV", "L_BRACKET", 
      "R_BRACKET", "AT", "ARROW", "UNDERSCORE", "FUNCTION", "LET", "PUBLIC", 
      "PRIVATE", "IMPORT", "RETURN", "TO", "TYPE_INT", "TYPE_CHAR", "TYPE_FLOAT", 
      "TYPE_STRING", "TYPE_BOOLEAN", "TYPE_DOUBLE", "VOID", "CAST", "CALL", 
      "REAL_NUMBER", "INT_NUMBER", "BOOLEAN_VALUE", "STRING_LITERAL", "IDENTIFIER", 
      "NEWLINE", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  hightlavelirParserStaticData = std::move(staticData);
}

}

HightLavelIRParser::HightLavelIRParser(TokenStream *input) : HightLavelIRParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

HightLavelIRParser::HightLavelIRParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  HightLavelIRParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *hightlavelirParserStaticData->atn, hightlavelirParserStaticData->decisionToDFA, hightlavelirParserStaticData->sharedContextCache, options);
}

HightLavelIRParser::~HightLavelIRParser() {
  delete _interpreter;
}

const atn::ATN& HightLavelIRParser::getATN() const {
  return *hightlavelirParserStaticData->atn;
}

std::string HightLavelIRParser::getGrammarFileName() const {
  return "HightLavelIR.g4";
}

const std::vector<std::string>& HightLavelIRParser::getRuleNames() const {
  return hightlavelirParserStaticData->ruleNames;
}

const dfa::Vocabulary& HightLavelIRParser::getVocabulary() const {
  return hightlavelirParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView HightLavelIRParser::getSerializedATN() const {
  return hightlavelirParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

HightLavelIRParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HightLavelIRParser::ProgramContext::EOF() {
  return getToken(HightLavelIRParser::EOF, 0);
}

std::vector<HightLavelIRParser::ImportStatementContext *> HightLavelIRParser::ProgramContext::importStatement() {
  return getRuleContexts<HightLavelIRParser::ImportStatementContext>();
}

HightLavelIRParser::ImportStatementContext* HightLavelIRParser::ProgramContext::importStatement(size_t i) {
  return getRuleContext<HightLavelIRParser::ImportStatementContext>(i);
}

std::vector<HightLavelIRParser::FunctionDeclarationContext *> HightLavelIRParser::ProgramContext::functionDeclaration() {
  return getRuleContexts<HightLavelIRParser::FunctionDeclarationContext>();
}

HightLavelIRParser::FunctionDeclarationContext* HightLavelIRParser::ProgramContext::functionDeclaration(size_t i) {
  return getRuleContext<HightLavelIRParser::FunctionDeclarationContext>(i);
}


size_t HightLavelIRParser::ProgramContext::getRuleIndex() const {
  return HightLavelIRParser::RuleProgram;
}

void HightLavelIRParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HightLavelIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void HightLavelIRParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HightLavelIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

HightLavelIRParser::ProgramContext* HightLavelIRParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, HightLavelIRParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(55);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == HightLavelIRParser::IMPORT) {
      setState(52);
      importStatement();
      setState(57);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(61);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 27262976) != 0)) {
      setState(58);
      functionDeclaration();
      setState(63);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(64);
    match(HightLavelIRParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportStatementContext ------------------------------------------------------------------

HightLavelIRParser::ImportStatementContext::ImportStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HightLavelIRParser::ImportStatementContext::IMPORT() {
  return getToken(HightLavelIRParser::IMPORT, 0);
}

HightLavelIRParser::QualifiedNameContext* HightLavelIRParser::ImportStatementContext::qualifiedName() {
  return getRuleContext<HightLavelIRParser::QualifiedNameContext>(0);
}

tree::TerminalNode* HightLavelIRParser::ImportStatementContext::DOT() {
  return getToken(HightLavelIRParser::DOT, 0);
}

tree::TerminalNode* HightLavelIRParser::ImportStatementContext::STAR() {
  return getToken(HightLavelIRParser::STAR, 0);
}


size_t HightLavelIRParser::ImportStatementContext::getRuleIndex() const {
  return HightLavelIRParser::RuleImportStatement;
}

void HightLavelIRParser::ImportStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HightLavelIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImportStatement(this);
}

void HightLavelIRParser::ImportStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HightLavelIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImportStatement(this);
}

HightLavelIRParser::ImportStatementContext* HightLavelIRParser::importStatement() {
  ImportStatementContext *_localctx = _tracker.createInstance<ImportStatementContext>(_ctx, getState());
  enterRule(_localctx, 2, HightLavelIRParser::RuleImportStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    match(HightLavelIRParser::IMPORT);
    setState(67);
    qualifiedName();
    setState(70);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == HightLavelIRParser::DOT) {
      setState(68);
      match(HightLavelIRParser::DOT);
      setState(69);
      match(HightLavelIRParser::STAR);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QualifiedNameContext ------------------------------------------------------------------

HightLavelIRParser::QualifiedNameContext::QualifiedNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> HightLavelIRParser::QualifiedNameContext::IDENTIFIER() {
  return getTokens(HightLavelIRParser::IDENTIFIER);
}

tree::TerminalNode* HightLavelIRParser::QualifiedNameContext::IDENTIFIER(size_t i) {
  return getToken(HightLavelIRParser::IDENTIFIER, i);
}

std::vector<tree::TerminalNode *> HightLavelIRParser::QualifiedNameContext::DOT() {
  return getTokens(HightLavelIRParser::DOT);
}

tree::TerminalNode* HightLavelIRParser::QualifiedNameContext::DOT(size_t i) {
  return getToken(HightLavelIRParser::DOT, i);
}


size_t HightLavelIRParser::QualifiedNameContext::getRuleIndex() const {
  return HightLavelIRParser::RuleQualifiedName;
}

void HightLavelIRParser::QualifiedNameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HightLavelIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQualifiedName(this);
}

void HightLavelIRParser::QualifiedNameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HightLavelIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQualifiedName(this);
}

HightLavelIRParser::QualifiedNameContext* HightLavelIRParser::qualifiedName() {
  QualifiedNameContext *_localctx = _tracker.createInstance<QualifiedNameContext>(_ctx, getState());
  enterRule(_localctx, 4, HightLavelIRParser::RuleQualifiedName);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(72);
    match(HightLavelIRParser::IDENTIFIER);
    setState(77);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(73);
        match(HightLavelIRParser::DOT);
        setState(74);
        match(HightLavelIRParser::IDENTIFIER); 
      }
      setState(79);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementListContext ------------------------------------------------------------------

HightLavelIRParser::StatementListContext::StatementListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<HightLavelIRParser::ExprContext *> HightLavelIRParser::StatementListContext::expr() {
  return getRuleContexts<HightLavelIRParser::ExprContext>();
}

HightLavelIRParser::ExprContext* HightLavelIRParser::StatementListContext::expr(size_t i) {
  return getRuleContext<HightLavelIRParser::ExprContext>(i);
}

std::vector<HightLavelIRParser::FunctionCallContext *> HightLavelIRParser::StatementListContext::functionCall() {
  return getRuleContexts<HightLavelIRParser::FunctionCallContext>();
}

HightLavelIRParser::FunctionCallContext* HightLavelIRParser::StatementListContext::functionCall(size_t i) {
  return getRuleContext<HightLavelIRParser::FunctionCallContext>(i);
}

std::vector<HightLavelIRParser::ReturnStatemantContext *> HightLavelIRParser::StatementListContext::returnStatemant() {
  return getRuleContexts<HightLavelIRParser::ReturnStatemantContext>();
}

HightLavelIRParser::ReturnStatemantContext* HightLavelIRParser::StatementListContext::returnStatemant(size_t i) {
  return getRuleContext<HightLavelIRParser::ReturnStatemantContext>(i);
}


size_t HightLavelIRParser::StatementListContext::getRuleIndex() const {
  return HightLavelIRParser::RuleStatementList;
}

void HightLavelIRParser::StatementListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HightLavelIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatementList(this);
}

void HightLavelIRParser::StatementListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HightLavelIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatementList(this);
}

HightLavelIRParser::StatementListContext* HightLavelIRParser::statementList() {
  StatementListContext *_localctx = _tracker.createInstance<StatementListContext>(_ctx, getState());
  enterRule(_localctx, 6, HightLavelIRParser::RuleStatementList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(85);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 68790779904) != 0)) {
      setState(83);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case HightLavelIRParser::LET: {
          setState(80);
          expr();
          break;
        }

        case HightLavelIRParser::CALL: {
          setState(81);
          functionCall();
          break;
        }

        case HightLavelIRParser::RETURN: {
          setState(82);
          returnStatemant();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(87);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDeclarationContext ------------------------------------------------------------------

HightLavelIRParser::FunctionDeclarationContext::FunctionDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HightLavelIRParser::FunctionDeclarationContext::FUNCTION() {
  return getToken(HightLavelIRParser::FUNCTION, 0);
}

HightLavelIRParser::FunctionSignatureContext* HightLavelIRParser::FunctionDeclarationContext::functionSignature() {
  return getRuleContext<HightLavelIRParser::FunctionSignatureContext>(0);
}

tree::TerminalNode* HightLavelIRParser::FunctionDeclarationContext::L_CURLY() {
  return getToken(HightLavelIRParser::L_CURLY, 0);
}

HightLavelIRParser::StatementListContext* HightLavelIRParser::FunctionDeclarationContext::statementList() {
  return getRuleContext<HightLavelIRParser::StatementListContext>(0);
}

tree::TerminalNode* HightLavelIRParser::FunctionDeclarationContext::R_CURLY() {
  return getToken(HightLavelIRParser::R_CURLY, 0);
}

tree::TerminalNode* HightLavelIRParser::FunctionDeclarationContext::IDENTIFIER() {
  return getToken(HightLavelIRParser::IDENTIFIER, 0);
}

tree::TerminalNode* HightLavelIRParser::FunctionDeclarationContext::PRIVATE() {
  return getToken(HightLavelIRParser::PRIVATE, 0);
}

tree::TerminalNode* HightLavelIRParser::FunctionDeclarationContext::PUBLIC() {
  return getToken(HightLavelIRParser::PUBLIC, 0);
}


size_t HightLavelIRParser::FunctionDeclarationContext::getRuleIndex() const {
  return HightLavelIRParser::RuleFunctionDeclaration;
}

void HightLavelIRParser::FunctionDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HightLavelIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionDeclaration(this);
}

void HightLavelIRParser::FunctionDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HightLavelIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionDeclaration(this);
}

HightLavelIRParser::FunctionDeclarationContext* HightLavelIRParser::functionDeclaration() {
  FunctionDeclarationContext *_localctx = _tracker.createInstance<FunctionDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 8, HightLavelIRParser::RuleFunctionDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == HightLavelIRParser::PUBLIC

    || _la == HightLavelIRParser::PRIVATE) {
      setState(88);
      _la = _input->LA(1);
      if (!(_la == HightLavelIRParser::PUBLIC

      || _la == HightLavelIRParser::PRIVATE)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
    }
    setState(91);
    match(HightLavelIRParser::FUNCTION);
    setState(92);
    antlrcpp::downCast<FunctionDeclarationContext *>(_localctx)->functionName = match(HightLavelIRParser::IDENTIFIER);
    setState(93);
    functionSignature();
    setState(94);
    match(HightLavelIRParser::L_CURLY);
    setState(95);
    statementList();
    setState(96);
    match(HightLavelIRParser::R_CURLY);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionSignatureContext ------------------------------------------------------------------

HightLavelIRParser::FunctionSignatureContext::FunctionSignatureContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HightLavelIRParser::FunctionSignatureContext::L_PAREN() {
  return getToken(HightLavelIRParser::L_PAREN, 0);
}

tree::TerminalNode* HightLavelIRParser::FunctionSignatureContext::R_PAREN() {
  return getToken(HightLavelIRParser::R_PAREN, 0);
}

HightLavelIRParser::FunctionArgsContext* HightLavelIRParser::FunctionSignatureContext::functionArgs() {
  return getRuleContext<HightLavelIRParser::FunctionArgsContext>(0);
}

HightLavelIRParser::FunctionReturnTypeContext* HightLavelIRParser::FunctionSignatureContext::functionReturnType() {
  return getRuleContext<HightLavelIRParser::FunctionReturnTypeContext>(0);
}


size_t HightLavelIRParser::FunctionSignatureContext::getRuleIndex() const {
  return HightLavelIRParser::RuleFunctionSignature;
}

void HightLavelIRParser::FunctionSignatureContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HightLavelIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionSignature(this);
}

void HightLavelIRParser::FunctionSignatureContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HightLavelIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionSignature(this);
}

HightLavelIRParser::FunctionSignatureContext* HightLavelIRParser::functionSignature() {
  FunctionSignatureContext *_localctx = _tracker.createInstance<FunctionSignatureContext>(_ctx, getState());
  enterRule(_localctx, 10, HightLavelIRParser::RuleFunctionSignature);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(98);
    match(HightLavelIRParser::L_PAREN);
    setState(100);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == HightLavelIRParser::IDENTIFIER) {
      setState(99);
      functionArgs();
    }
    setState(102);
    match(HightLavelIRParser::R_PAREN);
    setState(104);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == HightLavelIRParser::COLON) {
      setState(103);
      functionReturnType();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionReturnTypeContext ------------------------------------------------------------------

HightLavelIRParser::FunctionReturnTypeContext::FunctionReturnTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HightLavelIRParser::FunctionReturnTypeContext::COLON() {
  return getToken(HightLavelIRParser::COLON, 0);
}

HightLavelIRParser::VarTypesContext* HightLavelIRParser::FunctionReturnTypeContext::varTypes() {
  return getRuleContext<HightLavelIRParser::VarTypesContext>(0);
}

tree::TerminalNode* HightLavelIRParser::FunctionReturnTypeContext::VOID() {
  return getToken(HightLavelIRParser::VOID, 0);
}


size_t HightLavelIRParser::FunctionReturnTypeContext::getRuleIndex() const {
  return HightLavelIRParser::RuleFunctionReturnType;
}

void HightLavelIRParser::FunctionReturnTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HightLavelIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionReturnType(this);
}

void HightLavelIRParser::FunctionReturnTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HightLavelIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionReturnType(this);
}

HightLavelIRParser::FunctionReturnTypeContext* HightLavelIRParser::functionReturnType() {
  FunctionReturnTypeContext *_localctx = _tracker.createInstance<FunctionReturnTypeContext>(_ctx, getState());
  enterRule(_localctx, 12, HightLavelIRParser::RuleFunctionReturnType);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(106);
    match(HightLavelIRParser::COLON);
    setState(109);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      setState(107);
      varTypes();
      break;
    }

    case 2: {
      setState(108);
      match(HightLavelIRParser::VOID);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionArgsContext ------------------------------------------------------------------

HightLavelIRParser::FunctionArgsContext::FunctionArgsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<HightLavelIRParser::FunctionArgContext *> HightLavelIRParser::FunctionArgsContext::functionArg() {
  return getRuleContexts<HightLavelIRParser::FunctionArgContext>();
}

HightLavelIRParser::FunctionArgContext* HightLavelIRParser::FunctionArgsContext::functionArg(size_t i) {
  return getRuleContext<HightLavelIRParser::FunctionArgContext>(i);
}

std::vector<tree::TerminalNode *> HightLavelIRParser::FunctionArgsContext::COMMA() {
  return getTokens(HightLavelIRParser::COMMA);
}

tree::TerminalNode* HightLavelIRParser::FunctionArgsContext::COMMA(size_t i) {
  return getToken(HightLavelIRParser::COMMA, i);
}


size_t HightLavelIRParser::FunctionArgsContext::getRuleIndex() const {
  return HightLavelIRParser::RuleFunctionArgs;
}

void HightLavelIRParser::FunctionArgsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HightLavelIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionArgs(this);
}

void HightLavelIRParser::FunctionArgsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HightLavelIRListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionArgs(this);
}

HightLavelIRParser::FunctionArgsContext* HightLavelIRParser::functionArgs() {
  FunctionArgsContext *_localctx = _tracker.createInstance<FunctionArgsContext>(_ctx, getState());
  enterRule(_localctx, 14, HightLavelIRParser::RuleFunctionArgs);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(111);
    functionArg();
    setState(116);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == HightLavelIRParser::COMMA) {
      setState(112);
      match(HightLavelIRParser::COMMA);
      setState(113);
      functionArg();
      setState(118);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionArgContext ------------------------------------------------------------------

HightLavelIRParser::FunctionArgContext::FunctionArgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HightLavelIRParser::FunctionArgContext::COLON() {
  return getToken(HightLavelIRParser::COLON, 0);
}

tree::TerminalNode* HightLavelIRParser::FunctionArgContext::IDENTIFIER() {
  return getToken(HightLavelIRParser::IDENTIFIER, 0);
}

HightLavelIRParser::VarTypesContext* HightLavelIRParser::FunctionArgContext::varTypes() {
  return getRuleContext<HightLavelIRParser::VarTypesContext>(0);
}
